have it working after new API installed
