# AngularFrontend/src/app/api/models.ts
@@ -1,5 +1,9 @@
 /* tslint:disable */
 /* eslint-disable */
+export { Provider } from './models/provider';
+export { NewProvider } from './models/new-provider';
+export { ProviderWithRelations } from './models/provider-with-relations';
+export { ProviderPartial } from './models/provider-partial';
 export { Patient } from './models/patient';
 export { NewPatient } from './models/new-patient';
 export { PatientWithRelations } from './models/patient-with-relations';
