# AngularFrontend/src/app/api/models/new-provider.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: Provider, schemaOptions: { title: 'NewProvider' })
+ */
+export interface NewProvider {
+  ID: number;
+  providerName: string;
+}
