# AngularFrontend/src/app/api/models/provider-partial.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: Partial<Provider>, schemaOptions: { partial: true })
+ */
+export interface ProviderPartial {
+  ID?: number;
+  providerName?: string;
+}
