# AngularFrontend/src/app/api/models/provider-with-relations.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * (tsType: ProviderWithRelations, schemaOptions: { includeRelations: true })
+ */
+export interface ProviderWithRelations {
+  ID: number;
+  providerName: string;
+}
