# AngularFrontend/src/app/api/models/provider.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Provider {
+  ID: number;
+  providerName: string;
+}
