# AngularFrontend/src/app/api/services.ts
@@ -1,2 +1,3 @@
 export { PatientControllerService } from './services/patient-controller.service';
 export { PingControllerService } from './services/ping-controller.service';
+export { ProviderControllerService } from './services/provider-controller.service';
